tests/semantic/valid/test_comparison_types.src
fn main() -> void {
    int x = 5;
    float y = 3.14;
    bool z = true;

    bool r1 = x == 5;
    bool r2 = y > 3.0;
    bool r3 = (x + 1) <= (y * 2);
    bool r4 = z && (x > 0);
}